# PsychoClient

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
src/auth/: AuthWindow.cpp  AuthWindow.h  EditProfileDialog.cpp  EditProfileDialog.h
src/chat/: ChatWindow.cpp  ChatWindow.h
src/client/: BookSlotDialog.cpp  BookSlotDialog.h  ClientWindow.cpp  ClientWindow.h  PsychologistListWidget.cpp  PsychologistListWidget.h  SlotCalendarWidget.cpp  SlotCalendarWidget.h
src/common/: DashboardCard.cpp  DashboardCard.h  NotificationListDialog.cpp  NotificationListDialog.h  SessionCalendarDialog.cpp  SessionCalendarDialog.h  SessionListDialog.cpp  SessionListDialog.h
src/diary/: DiaryWindow.cpp  DiaryWindow.h
src/network/: ErrorHelper.h  NetworkManager.cpp  NetworkManager.h
src/psychologist/: PsychologistWindow.cpp  PsychologistWindow.h  ScheduleWidget.cpp  ScheduleWidget.h
tests/: CMakeLists.txt  test_client_logic.cpp
